# pay2email

./: .env  .envrc  .gitattributes  .gitignore  Cargo.toml  Readme.md  Rocket.toml  flake.nix
db/diesel/migrations/1_create_emails_table/: down.sql  up.sql
db/diesel/migrations/2_create_invoices_table/: down.sql  up.sql
node-side/: on_pay.py  requirements.txt  upload_invoices.py
src/: db.rs  encrypt.rs  error.rs  main.rs  qr.rs  routes.rs
static/: about.txt  index.html  invoice.html
static/contact/: index.html
