[package]
name = "pay2email"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1", features = ["full"] }
lettre = { version = "0.10.0-rc.4", features = ["smtp-transport", "tokio1", "tokio1-native-tls", "builder"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
age = "0.7.0"
bech32 = "0.8.1"
diesel = { version = "1.3", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "1.3"
lightning-invoice = "0.11.0"
bitcoin_hashes = "0.10.0"
base64 = "0.13.0"
qr_code = { version= "1.1.0", features =["bmp"] }
serde = { version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
chrono = "0.4.19"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_sqlite_pool"]
